fix(prisma): update Prisma v7 setup for Postgres/Neon
- Installed @prisma/adapter-pg and updated PrismaClient instantiation
- Added adapter configuration to Prisma client for ESM/Neon compatibility
- Updated import paths to generated client and ensured dotenv loads DATABASE_URL
- Fixed TypeScript errors: (Expected 1 arguments, but got 0 and module resolution)

--- a/backend-scripts/package.json
+++ b/backend-scripts/package.json
@@ -9,16 +9,21 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "axios": "^1.13.2",
-    "dotenv": "^17.2.3",
+    "cors": "^2.8.5",
     "express": "^5.2.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "prisma": "^7.2.0",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
+    "dotenv": "^17.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
