--- a/backend-scripts/package.json
+++ b/backend-scripts/package.json
@@ -21,6 +21,7 @@
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "dotenv": "^17.2.3",
