added component for chat-input box

--- a/web/jsconfig.json
+++ b/web/jsconfig.json
@@ -1,8 +1,11 @@
 {
+  "jsx": "react", // or "react-jsx" for React 17 and later
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     }
   }
 }
